bugfix: ticket 0001085 - slider arrow not visible on home

--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -27,6 +27,17 @@
   }
 }
 
+.isHome {
+  .slick-next.slick-arrow {
+    width: 38px;
+    height: 66px;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
 /* ------------------------------------------------------------ *\
 	Slider
 \* ------------------------------------------------------------ */
